[package]
name = 'uiac'
version = '0.1.0'
edition = '2021'
authors = ['Ben Weedon <ben@weedon.email>']
description = 'A command line interface for UIA on Windows.'

[dependencies]
clap = {version = '4.0.32', features = ['derive']}
windows = {version = '0.43.0', features = [
    'Win32_Foundation',
    'Win32_System_Com',
    'Win32_System_Ole',
    'Win32_UI_Accessibility',
]}
